packages/platform/nros-platform-api/include/nros/platform.h

/* ---- Clock (monotonic) ---- */

/** Monotonic nanoseconds since a platform-defined epoch (boot, program
 *  start, …). Never decreases. Wraps after ~584 years.
 *
 *  Must be backed by a hardware counter or the OS tick — never by a
 *  software counter that only advances when polled.
 *
 *  Available immediately after platform init, before any other nros
 *  subsystem. SHOULD be callable from an ISR; a port whose clock is not
 *  ISR-safe must say so in its port documentation.
 *
 *  RFC-0073: this replaced the former `clock_ms` / `clock_us` pair. Ports
 *  that can convert without a runtime division should — where the counter
 *  frequency divides 1e9 (25/50/100/125/200/250 MHz) a compile-time
 *  ns-per-cycle multiply is ~2.5x cheaper than the divide it replaces. */
uint64_t nros_platform_clock_ns(void);
/** Spawn a new task. `task` is opaque caller-provided storage (size from
 *  `nros_platform_task_storage_size`); `attr` is a
 *  `nros_platform_task_attr_t *`, or `NULL` for every default; `entry` is the
 *  task entry point; `arg` is forwarded to `entry`.
 *
 *  Returns `NROS_PLATFORM_RET_OK`, or `INVALID` (a NULL where storage or an
 *  entry is required), `NOMEM` (resources exhausted now — retry may succeed) or
 *  `UNSUPPORTED` (this port has no tasks at all). */
int8_t nros_platform_task_init(void *task, void *attr,
                               void *(*entry)(void *), void *arg);
/** Like `condvar_wait`, but with an absolute monotonic deadline in
 *  MILLISECONDS on the `nros_platform_clock_ns()` epoch — i.e.
 *  `clock_ns() / 1000000`. Returns non-zero on timeout.
 *
 *  Spelt out because this said "`clock_ms` units" after RFC-0073 /
 *  phase-352 W6 retired `nros_platform_clock_ms`: it named a function
 *  that no longer exists, leaving a port author no way to resolve the
 *  unit from this header. The unit itself never changed — every port
 *  names the parameter `abstime_ms` and the Rust trait says
 *  milliseconds — so this is the wording catching up, not an ABI
 *  change. */
int8_t nros_platform_condvar_wait_until(void *cv, void *m, uint64_t abstime);
/* ---- Threading: wake primitive (Phase 130) ----
 *
 * Binary-semaphore-shaped primitive used by the executor's wake_flag /
 * spin_once cv-wait pair. Separate from `nros_platform_condvar_*` so
 * the executor doesn't inherit zenoh-pico's pthread-shaped Zephyr
 * ABI (which on libc hangs past `pthread_cond_timedwait` deadlines).
 *
 * Per-platform impl:
 *  * POSIX:    `sem_t` with `sem_timedwait` (`CLOCK_MONOTONIC`).
 *  * Zephyr:   `k_sem` (kernel-native, libc-pthread-free).
 *  * FreeRTOS: `xSemaphoreCreateBinary` + `xSemaphoreGiveFromISR`.
 *  * NuttX:    POSIX `sem_t` via NuttX libc (`sem_timedwait`).
 *  * ThreadX:  `tx_semaphore` (ISR-safe `tx_semaphore_put`).
 *  * bare:     atomic flag + busy-spin against the platform clock.
 *
 * `wait_ms` returns 0 on signal, 1 on timeout, -1 on error.
 * `signal_from_isr` returns -1 if the backend has no ISR-safe path;
 * callers may fall back to `signal()` accepting the latency cost.
 * Storage is opaque to the caller; size/alignment via the probe
 * helpers below. */
int8_t  nros_platform_wake_init(void *w);
int8_t  nros_platform_wake_drop(void *w);
int8_t  nros_platform_wake_wait_ms(void *w, uint32_t timeout_ms);
int8_t  nros_platform_wake_signal(void *w);
int8_t  nros_platform_wake_signal_from_isr(void *w);
/** Opaque-storage sizing. Both helpers are pure functions (no global
 *  state) and may be called before `nros_platform_wake_init`. */
size_t  nros_platform_wake_storage_size(void);
size_t  nros_platform_wake_storage_align(void);
/* ---- Critical section ---- */
/* Phase 121.9 — global mutual exclusion against preemption + ISR
 * delivery. Backs the Rust `critical_section::Impl` registration used
 * by DDS, nros-rmw-{xrce,zenoh}, and any consumer of
 * `critical_section::with()`. Reentrant by contract: every acquire
 * must be paired with exactly one release, and the platform handles
 * nesting (PRIMASK already stacks; pthread side uses a recursive
 * mutex).
 *
 * The `uint32_t` token holds whatever the platform needs to restore
 * the prior posture — Cortex-M PRIMASK bit, Cortex-R CPSR I-bit,
 * RISC-V `mstatus.MIE` snapshot, pthread depth counter — and is
 * opaque to the caller. */
uint32_t nros_platform_critical_section_acquire(void);
void     nros_platform_critical_section_release(uint32_t token);
/* ---- Logging (Phase 88) ---- */
/* Per-platform leveled log delivery, matching the post-Phase-129
 * pattern: portable facade (`nros-log`) formats into a buffer and
 * hands the rendered text to whichever `nros-platform-<rtos>` is
 * linked in. POSIX writes to stderr; Zephyr routes through
 * `LOG_MODULE_DECLARE(nros)` (or `printk` fallback); ESP-IDF goes
 * through `esp_log_write`; NuttX through `syslog`; FreeRTOS /
 * ThreadX / bare-metal expose a `register_log_writer(...)` helper
 * in their platform crate so boards register the actual writer
 * (UART / semihosting / defmt / RTT) once at startup.
 *
 * `severity`: matches `nros_log::Severity::as_u8()`:
 *   0 = Trace, 1 = Debug, 2 = Info, 3 = Warn, 4 = Error, 5 = Fatal.
 * Implementors should map onto the platform's nearest level.
 *
 * `name_ptr` / `name_len`: logger name (NOT null-terminated; UTF-8).
 *   May be empty (the catch-all logger).
 * `msg_ptr`  / `msg_len`:  already-formatted message body (NOT null-
 *   terminated; UTF-8). Implementors that need a `CStr` must copy
 *   into their own buffer + append `'\0'`.
 *
 * No return value: log delivery never fails from the caller's POV.
 * Platforms drop silently on internal overflow (e.g. RTT ring full).
 *
 * `nros_platform_log_flush`: best-effort drain of any internal
 * buffer (RTT, syslog buffered chan, etc.). Default impl = no-op.
 *
 * Thread / ISR safety is documented per platform — see the table
 * in `docs/roadmap/phase-88-nros-log.md`. The ABI itself is
 * synchronous + reentrant-safe at the caller layer (a recursion
 * guard in `nros-log` prevents fan-out re-entry). */
void nros_platform_log_write(
    uint8_t        severity,
    const uint8_t *name_ptr, uintptr_t name_len,
    const uint8_t *msg_ptr,  uintptr_t msg_len);
void nros_platform_log_flush(void);
/* Board-supplied writer hook. ONLY meaningful on platforms whose
 * `nros_platform_log_write` impl is itself a thin dispatcher to a
 * board-registered fn (FreeRTOS, ThreadX, bare-metal). On platforms
 * with a native logger (POSIX, Zephyr, ESP-IDF, NuttX), the symbol
 * is absent and the board should not link against it.
 *
 * Board crates call this ONCE at startup, before any task / thread
 * begins logging. Re-calling replaces the registration.
 *
 * `writer` matches the signature of `nros_platform_log_write`.
 * `flusher` is optional (pass NULL for fully-synchronous writers). */
typedef void (*nros_platform_log_writer_fn_t)(
    uint8_t        severity,
    const uint8_t *name_ptr, uintptr_t name_len,
    const uint8_t *msg_ptr,  uintptr_t msg_len);
typedef void (*nros_platform_log_flush_fn_t)(void);
void nros_platform_register_log_writer(
    nros_platform_log_writer_fn_t writer,
    nros_platform_log_flush_fn_t  flusher);
NROS_PLATFORM_NORETURN void nros_platform_panic(const char *msg, size_t len);