packages/platform/nros-platform-cffi/src/generated.rs

unsafe extern "C" {
    #[doc = " Like `condvar_wait`, but with an absolute monotonic deadline in\n  MILLISECONDS on the `nros_platform_clock_ns()` epoch — i.e.\n  `clock_ns() / 1000000`. Returns non-zero on timeout.\n\n  Spelt out because this said \"`clock_ms` units\" after RFC-0073 /\n  phase-352 W6 retired `nros_platform_clock_ms`: it named a function\n  that no longer exists, leaving a port author no way to resolve the\n  unit from this header. The unit itself never changed — every port\n  names the parameter `abstime_ms` and the Rust trait says\n  milliseconds — so this is the wording catching up, not an ABI\n  change."]
    pub fn nros_platform_condvar_wait_until(
        cv: *mut core::ffi::c_void,
        m: *mut core::ffi::c_void,
        abstime: u64,
    ) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_init(w: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_drop(w: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_wait_ms(w: *mut core::ffi::c_void, timeout_ms: u32) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_signal(w: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_wake_signal_from_isr(w: *mut core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Opaque-storage sizing. Both helpers are pure functions (no global\n  state) and may be called before `nros_platform_wake_init`."]
    pub fn nros_platform_wake_storage_size() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_wake_storage_align() -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_critical_section_acquire() -> u32;
}
unsafe extern "C" {
    pub fn nros_platform_critical_section_release(token: u32);
}
unsafe extern "C" {
    pub fn nros_platform_log_write(
        severity: u8,
        name_ptr: *const u8,
        name_len: usize,
        msg_ptr: *const u8,
        msg_len: usize,
    );
}
unsafe extern "C" {
    pub fn nros_platform_log_flush();
}
unsafe extern "C" {
    pub fn nros_platform_register_log_writer(
        writer: nros_platform_log_writer_fn_t,
        flusher: nros_platform_log_flush_fn_t,
    );
}
unsafe extern "C" {
    pub fn nros_platform_panic(msg: *const core::ffi::c_char, len: usize);
}
unsafe extern "C" {
    #[doc = " Resolve `(address, port)` strings into the caller-allocated endpoint\n  storage at `ep`. Both strings are NUL-terminated."]
    pub fn nros_platform_tcp_create_endpoint(
        ep: *mut core::ffi::c_void,
        address: *const u8,
        port: *const u8,
    ) -> i8;
}
unsafe extern "C" {
    #[doc = " Release any resources held by the endpoint at `ep`."]
    pub fn nros_platform_tcp_free_endpoint(ep: *mut core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " Open a TCP client connection to `endpoint`."]
    pub fn nros_platform_tcp_open(
        sock: *mut core::ffi::c_void,
        endpoint: *const core::ffi::c_void,
        timeout_ms: u32,
    ) -> i8;
}
unsafe extern "C" {
    #[doc = " Open a listening TCP socket bound to `endpoint`."]
    pub fn nros_platform_tcp_listen(
        sock: *mut core::ffi::c_void,
        endpoint: *const core::ffi::c_void,
    ) -> i8;
}
unsafe extern "C" {
    #[doc = " Close a TCP socket."]
    pub fn nros_platform_tcp_close(sock: *mut core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " Read up to `len` bytes. Returns bytes received, or\n  `NROS_PLATFORM_NET_SOCKET_ERROR` on error."]
    pub fn nros_platform_tcp_read(
        sock: *const core::ffi::c_void,
        buf: *mut u8,
        len: usize,
    ) -> usize;
}
unsafe extern "C" {
    #[doc = " Read exactly `len` bytes. Returns `len` on success, or\n  `NROS_PLATFORM_NET_SOCKET_ERROR` on error."]
    pub fn nros_platform_tcp_read_exact(
        sock: *const core::ffi::c_void,
        buf: *mut u8,
        len: usize,
    ) -> usize;
}
unsafe extern "C" {
    #[doc = " Send `len` bytes. Returns bytes sent, or\n  `NROS_PLATFORM_NET_SOCKET_ERROR` on error."]
    pub fn nros_platform_tcp_send(
        sock: *const core::ffi::c_void,
        buf: *const u8,
        len: usize,
    ) -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_udp_create_endpoint(
        ep: *mut core::ffi::c_void,
        address: *const u8,
        port: *const u8,
    ) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_udp_free_endpoint(ep: *mut core::ffi::c_void);
}
unsafe extern "C" {
    pub fn nros_platform_udp_open(
        sock: *mut core::ffi::c_void,
        endpoint: *const core::ffi::c_void,
        timeout_ms: u32,
    ) -> i8;
}
unsafe extern "C" {
    #[doc = " Bind a UDP socket in listen / server mode. Optional — return -1\n  on platforms that don't expose a UDP-server primitive."]
    pub fn nros_platform_udp_listen(
        sock: *mut core::ffi::c_void,
        endpoint: *const core::ffi::c_void,
        timeout_ms: u32,
    ) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_udp_close(sock: *mut core::ffi::c_void);
}
unsafe extern "C" {
    pub fn nros_platform_udp_read(
        sock: *const core::ffi::c_void,
        buf: *mut u8,
        len: usize,
    ) -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_udp_read_exact(
        sock: *const core::ffi::c_void,
        buf: *mut u8,
        len: usize,
    ) -> usize;
}
unsafe extern "C" {
    #[doc = " Send `len` bytes to `endpoint`."]
    pub fn nros_platform_udp_send(
        sock: *const core::ffi::c_void,
        buf: *const u8,
        len: usize,
        endpoint: *const core::ffi::c_void,
    ) -> usize;
}
unsafe extern "C" {
    #[doc = " Set the recv timeout in milliseconds; `0` means block indefinitely."]
    pub fn nros_platform_udp_set_recv_timeout(sock: *const core::ffi::c_void, timeout_ms: u32);
}
unsafe extern "C" {
    pub fn nros_platform_udp_mcast_open(
        sock: *mut core::ffi::c_void,
        endpoint: *const core::ffi::c_void,
        lep: *mut core::ffi::c_void,
        timeout_ms: u32,
        iface: *const u8,
    ) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_udp_mcast_listen(
        sock: *mut core::ffi::c_void,
        endpoint: *const core::ffi::c_void,
        timeout_ms: u32,
        iface: *const u8,
        join: *const u8,
    ) -> i8;
}
unsafe extern "C" {
    pub fn nros_platform_udp_mcast_close(
        sockrecv: *mut core::ffi::c_void,
        socksend: *mut core::ffi::c_void,
        rep: *const core::ffi::c_void,
        lep: *const core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn nros_platform_udp_mcast_read(
        sock: *const core::ffi::c_void,
        buf: *mut u8,
        len: usize,
        lep: *const core::ffi::c_void,
        addr: *mut core::ffi::c_void,
    ) -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_udp_mcast_read_exact(
        sock: *const core::ffi::c_void,
        buf: *mut u8,
        len: usize,
        lep: *const core::ffi::c_void,
        addr: *mut core::ffi::c_void,
    ) -> usize;
}
unsafe extern "C" {
    pub fn nros_platform_udp_mcast_send(
        sock: *const core::ffi::c_void,
        buf: *const u8,
        len: usize,
        endpoint: *const core::ffi::c_void,
    ) -> usize;
}
unsafe extern "C" {
    #[doc = " Switch a socket to non-blocking mode."]
    pub fn nros_platform_socket_set_non_blocking(sock: *const core::ffi::c_void) -> i8;
}
unsafe extern "C" {
    #[doc = " Accept a pending connection from `sock_in` into `sock_out`."]
    pub fn nros_platform_socket_accept(
        sock_in: *const core::ffi::c_void,
        sock_out: *mut core::ffi::c_void,
    ) -> i8;
}
unsafe extern "C" {
    #[doc = " Socket-layer shutdown + close. Distinct from\n  `nros_platform_tcp_close` because zenoh-pico's helper layer\n  exposes both."]
    pub fn nros_platform_socket_close(sock: *mut core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " Wait for socket events on a multi-peer set. Optional on platforms\n  without a poll/select primitive."]
    pub fn nros_platform_socket_wait_event(
        peers: *mut core::ffi::c_void,
        mutex: *mut core::ffi::c_void,
    ) -> i8;
}
unsafe extern "C" {
    #[doc = " Pump the underlying network stack to process pending I/O.\n  No-op on platforms with a kernel-driven socket layer (POSIX,\n  Zephyr, lwIP, NetX Duo). Bare-metal smoltcp targets advance\n  the stack from this entry point."]
    pub fn nros_platform_network_poll();
}
unsafe extern "C" {
    #[doc = " Register a periodic timer that invokes `callback(user_data)` every\n  `period_us` microseconds. Returns the platform-native handle on\n  success, NULL on failure."]
    pub fn nros_platform_timer_create_periodic(
        period_us: u32,
        callback: nros_platform_timer_callback_t,
        user_data: *mut core::ffi::c_void,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    #[doc = " Register a one-shot timer that invokes `callback(user_data)` once\n  after `timeout_us` microseconds. Returns the platform-native\n  handle on success, NULL on failure."]
    pub fn nros_platform_timer_create_oneshot(
        timeout_us: u32,
        callback: nros_platform_timer_callback_t,
        user_data: *mut core::ffi::c_void,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    #[doc = " Cancel + free the timer. Drains in-flight callback invocations\n  before returning so `user_data` is no longer accessed. Idempotent\n  on already-destroyed handles."]
    pub fn nros_platform_timer_destroy(handle: *mut core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " Cancel a previously-armed timer. Returns:\n\n   - 1 if cancellation prevented the callback from firing,\n   - 0 if the callback already fired (or the timer was already\n     cancelled / destroyed),\n   - -1 on unrecoverable error.\n\n  Distinct from `destroy` — the handle remains valid after\n  `cancel` and may be re-armed by the application's own\n  bookkeeping if the implementation supports it."]
    pub fn nros_platform_timer_cancel(handle: *mut core::ffi::c_void) -> i8;
}
